--- a/index.html
+++ b/index.html
@@ -10,27 +10,66 @@
     <body>
         <section id="HOME">
    
-        <div id="main_image_div">
-        </div>
-            
+            <div class="my_container">
+        <div id="main_image_div".></div>
+                <div class="col-left">
+                    <img src="http://lorempixel.com/500/500/abstract" />
+                </div>   
+                <div class="col-right">
+                    <h1>Get inspired!</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
+                    <a href="#" class="btn btn-primary"> Take A Tour</a>
+                </div>
+            </div>
         </section>
+        <div class="clear"></div>
         <section id="ABOUT"> 
+            <div class="my_container">
+            <h1>About us.</h1>
             <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur laoreet metus posuere, lobortis odio fringilla, sodales risus. Donec pulvinar massa eget lacus sollicitudin dapibus. Nullam dapibus iaculis lectus in facilisis. Integer eget euismod justo, in vestibulum tortor. Ut a suscipit lacus. Ut a arcu ut turpis dignissim ultricies. Praesent accumsan feugiat sem quis laoreet. Nulla sit amet nunc lacinia, ullamcorper eros at, convallis purus. Duis imperdiet augue ut tellus interdum finibus. Suspendisse arcu magna, dictum vitae varius at, accumsan sit amet eros. Aenean sodales mollis orci, sed sollicitudin erat ullamcorper nec. Duis et gravida justo. Praesent viverra velit massa, a dignissim odio porttitor suscipit. Ut a tellus vehicula, lacinia justo et, egestas arcu. Nullam eget lacinia est, id pharetra diam.        
     </p>     
+            </div>
         </section>
-        <section id="PEOPLE">
+        <section id="PEOPLE">           
+            <div class="my_container">
+            <h1>People.</h1>
+            </div>
         </section>
         <section id="INSPIRATIONS">
+            <div class="my_container">
+            <h1>Inspirations.</h1>
+            <div class="col-1"> 
+                <h2>Art</h2>
   <p>
         Aenean posuere elit sem, in volutpat dui dignissim non. Praesent imperdiet iaculis diam, ac consectetur est imperdiet a. Suspendisse potenti. Phasellus in nisi eget magna faucibus vestibulum. Maecenas urna dolor, euismod vel imperdiet a, eleifend sed purus. Vestibulum dapibus tempus elit sit amet interdum. Maecenas scelerisque nunc nisl, in congue magna sodales a. Donec id leo ligula.
     </p>
+                
+                    <a href="#" class="btn btn-default"> More...</a>
+                </div>
+            <div class="col-2"> 
+                <h2>Fashion</h2>
     <p>
         Cras ut est maximus, euismod lacus eu, ultricies justo. Phasellus hendrerit congue finibus. Vivamus molestie ligula sit amet pellentesque faucibus. Sed ultricies lectus enim, ac semper ipsum mattis non. Nullam euismod mi id odio auctor aliquam. Suspendisse dictum leo sapien, ac tempor mi sagittis vitae. In maximus ac elit eu faucibus. Cras eget lorem turpis. Sed nec mauris eu neque ullamcorper hendrerit.
     </p>
-    <p>
+                    <a href="#" class="btn btn-default"> More...</a>
+                  </div>
+            <div class="col-3"> 
+                <h2>Food</h2>
+            <p>
+            Morbi pretium, quam non pretium sagittis, arcu magna mollis tortor, vel lobortis enim dui id metus. Suspendisse tempus, massa a pretium suscipit, nulla est consectetur leo, a posuere magna sem at eros. Nullam quis pellentesque mi. Proin est nisl, accumsan ac libero ac, pulvinar fermentum nunc. Vestibulum a urna rhoncus, euismod dolor eget, pellentesque quam. Donec sit amet turpis in tellus dignissim auctor. Nullam magna dui, fringilla sit amet consequat egestas, volutpat ut eros. Quisque mattis iaculis est eu vestibulum.
+            </p>
+                    <a href="#" class="btn btn-default"> More...</a>
+                  </div>
+            </div>
+                </section>
+            <section id="CONTACT">
+                <div class="my_container">
+                    <h1>Contact.</h1>
+                     <p>
         Maecenas aliquet enim in libero imperdiet, ut auctor orci dapibus. Morbi aliquet congue nisl, ac faucibus diam condimentum ultrices. Aliquam bibendum libero in convallis porttitor. Nulla nec imperdiet quam. Donec vitae lacinia magna, at cursus purus. Aenean quis lacus vel felis suscipit tincidunt. Maecenas maximus dolor leo, in dignissim tellus varius eleifend. Maecenas posuere ornare bibendum. Donec aliquet dui ante, in convallis ante dignissim nec. Nunc scelerisque sagittis leo nec egestas. Proin et erat id nunc ullamcorper iaculis. Nam iaculis nunc ipsum, a elementum enim fermentum eu. In vel velit eget lectus blandit efficitur suscipit eget justo.
     </p>
+                </div>
         </section>
         </body>
     <footer>
